Issue #51: Add dark mode (#108)

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -5,6 +5,9 @@
 }
 
 .dashboard {
+  padding: 16px;
+  margin: 0 10%;
+  position: relative;
   padding: 16px calc(16px + 10%);
   overflow-y: auto;
 }
@@ -17,4 +20,9 @@ h1.slackable-title {
 
 h2.default-theme-title {
   @include title-style();
+}
+
+.dark-mode-switcher {
+  position: absolute;
+  right: 15px;
 }
