--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -39,6 +39,7 @@ $title-font-size: 1.125rem;
 }
 
 .sidebar {
+  @include lighter-border();
   background-color: $purple;
   color: #fff;
   font-size: $default-font-size;
@@ -68,14 +69,9 @@ $title-font-size: 1.125rem;
   }
 
   .sidebar-nav {
-    @include lighter-border();
 
     .plus-icon {
       @include right-float();
-    }
-
-    .chat-options {
-      @include lighter-border();
     }
 
     .down-icon {
